fix link to tutorials

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -38,7 +38,7 @@
     "    \\end{cases}\n",
     "$$\n",
     "\n",
-    "Where:\n",
+    "where\n",
     "\n",
     "- $x$ is the forecast\n",
     "- $y$ is the observation\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for mean)')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -273,7 +273,7 @@
     "\n",
     "$$ S(x, y) = \\begin{cases}(1 - \\alpha)(g(x) - g(y)), & y < x \\\\\\alpha(g(y) - g(x)), & x \\leq y\\end{cases}$$\n",
     "\n",
-    "where:\n",
+    "where\n",
     "\n",
     "- $x$ is the forecast\n",
     "- $y$ is the observation\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for 90th percentile)')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
