improve headers in tutorial

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# Consistent scores\n",
+    "## Introduction \n",
     "\n",
     "A \"consistent scoring function\" is a scoring function where a forecaster's expected score will be optimised by following a forecast directive. An example of a forecast directive is to \"predict the mean (i.e., expected) rainfall amount\". Using a consistent scoring function ensures that a forecaster or forecast system developer isn't faced with the dilemma of whether to \n",
     "\n",
@@ -24,7 +25,7 @@
     "<b>Note:</b> Threshold weighted scoring functions will be added to scores. These threshold weighted scoring functions will use these consistent scoring functions and will allow users a more simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. Its tutorial notebook is expected to compliment this.\n",
     "</div>\n",
     "\n",
-    "### Example 1. A score consistent with the mean\n",
+    "## Example 1. A score consistent with the mean\n",
     "Let's jump into an example that illustrates a scoring function that is consistent with predicting the mean value using `scores`. Suppose we want to evaluate the performance of expected daily precipitation forecasts, but we want to place increasing importance on correctly forecasting extreme values. MSE is consistent with predicting the mean value, but weights all decision thresholds equally (as discussed further on).\n",
     "\n",
     "The mean (or expectation) functional is equivalent to the 0.5-[expectile](https://en.wikipedia.org/wiki/Expectile), so we want to use the `consistent_expectile_score` in `scores` to evaluate the expected daily precipitation forecasts. Note that the mean is identical to the 0.5-expectile in the same way that the median is identical to the 0.5-quantile (or 50th percentile).\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +221,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for mean)')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -265,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 2. A score consistent with a quantile\n",
+    "## Example 2. A score consistent with a quantile\n",
     "\n",
     "Suppose we have a 90th percentile wind speed forecast that we want to evaluate. Additionally, we wish to emphasise predictive performance for higher decision thresholds. We can use the `consistent_quantile_score` in `scores`.\n",
     "\n",
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +388,7 @@
        "Text(0.5, 0.98, 'Murphy Score (for 90th percentile)')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -432,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Things to try next.\n",
+    "## Things to try next\n",
     "\n",
     "- Test out different weighting functions. \n",
     "- Try out `consistent_huber_score`. This uses $\\phi$ and $\\phi'$ like `consistent_expectile_score`, but also takes a huber parameter.\n",
