change citation style to apa

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -439,11 +439,11 @@
     "- Try out `consistent_huber_score`. This uses $\\phi$ and $\\phi'$ like `consistent_expectile_score`, but also takes a huber parameter.\n",
     "\n",
     "## Further reading\n",
-    "- [Gneiting, T., 2011. Making and evaluating point forecasts. Journal of the American Statistical Association, 106(494), pp.746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
-    "- [Gneiting, T. (2011). Quantiles as optimal point forecasts. International Journal of Forecasting, 27(2), 197–207.](https://doi.org/10.1016/j.ijforecast.2009.12.015)\n",
-    "- [Savage, L. J. (1971). Elicitation of Personal Probabilities and Expectations. Journal of the American Statistical Association, 66(336), 783.](https://doi.org/10.2307/2284229)\n",
-    "- [Taggart, R., 2022. Evaluation of point forecasts for extreme events using consistent scoring functions. Quarterly Journal of the Royal Meteorological Society, 148(742), pp.306-320.](https://doi.org/10.1002/qj.4206)\n",
-    "- [Taggart, R.J., 2022. Point forecasting and forecast evaluation with generalized Huber loss. Electronic Journal of Statistics, 16(1), pp.201-231.](https://doi.org/10.1214/21-EJS1957)"
+    "- [Gneiting, T. (2011). Making and evaluating point forecasts. Journal of the American Statistical Association, 106(494), 746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
+    "- [Gneiting, T. (2011). Quantiles as optimal point forecasts. International Journal of forecasting, 27(2), 197-207.](https://doi.org/10.1016/j.ijforecast.2009.12.015)\n",
+    "- [Savage, L. J. (1971). Elicitation of personal probabilities and expectations. Journal of the American Statistical Association, 66(336), 783-801.](https://doi.org/10.2307/2284229)\n",
+    "- [Taggart, R. (2022). Evaluation of point forecasts for extreme events using consistent scoring functions. Quarterly Journal of the Royal Meteorological Society, 148(742), 306-320.](https://doi.org/10.1002/qj.4206)\n",
+    "- [Taggart, R. J. (2022). Point forecasting and forecast evaluation with generalized Huber loss. Electronic Journal of Statistics, 16(1), 201-231.](https://doi.org/10.1214/21-EJS1957)"
    ]
   },
   {
