--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -22,7 +22,7 @@
     "The consistent scoring module in `scores` provides access to these families of consistent scores that can be used to tailor emphasis of predictive performance based on decision thresholds of interest.\n",
     "\n",
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Note:</b> Threshold weighted scoring functions will be added to scores. These threshold weighted scoring functions will use these consistent scoring functions and will allow users a more simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. Its tutorial notebook is expected to compliment this.\n",
+    "<b>Note:</b> Threshold weighted scoring functions will be added to scores. These threshold weighted scoring functions will use these consistent scoring functions and will allow users a more simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. The planned tutorial notebook for threshold weighted scoring functions is expected to complement this tutorial.\n",
     "</div>\n",
     "\n",
     "## Example 1. A score consistent with the mean\n",
@@ -439,8 +439,8 @@
     "- Try out `consistent_huber_score`. This uses $\\phi$ and $\\phi'$ like `consistent_expectile_score`, but also takes a huber parameter.\n",
     "\n",
     "## Further reading\n",
-    "- [Gneiting, T. (2011). Making and evaluating point forecasts. Journal of the American Statistical Association, 106(494), 746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
-    "- [Gneiting, T. (2011). Quantiles as optimal point forecasts. International Journal of forecasting, 27(2), 197-207.](https://doi.org/10.1016/j.ijforecast.2009.12.015)\n",
+    "- [Gneiting, T. (2011a). Making and evaluating point forecasts. Journal of the American Statistical Association, 106(494), 746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
+    "- [Gneiting, T. (2011b). Quantiles as optimal point forecasts. International Journal of forecasting, 27(2), 197-207.](https://doi.org/10.1016/j.ijforecast.2009.12.015)\n",
     "- [Savage, L. J. (1971). Elicitation of personal probabilities and expectations. Journal of the American Statistical Association, 66(336), 783-801.](https://doi.org/10.2307/2284229)\n",
     "- [Taggart, R. (2022). Evaluation of point forecasts for extreme events using consistent scoring functions. Quarterly Journal of the Royal Meteorological Society, 148(742), 306-320.](https://doi.org/10.1002/qj.4206)\n",
     "- [Taggart, R. J. (2022). Point forecasting and forecast evaluation with generalized Huber loss. Electronic Journal of Statistics, 16(1), 201-231.](https://doi.org/10.1214/21-EJS1957)"
@@ -454,7 +454,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scoresenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -468,10 +468,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.12.4"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
