Add note regarding data fetching to tutorials which rely on it

--- a/tutorials/Mean_Absolute_Error.ipynb
+++ b/tutorials/Mean_Absolute_Error.ipynb
@@ -20,7 +20,9 @@
     "This tutorial also includes some useful information on \n",
     "\n",
     "- matching the forecast lead time to the validity time of the observations\n",
-    "- reducing spatial dimensionality to view how accuracy depends on latitude or longitude.\n"
+    "- reducing spatial dimensionality to view how accuracy depends on latitude or longitude.\n",
+    "\n",
+    "**Note:** In this tutorial we use the forecast and analysis grids that are downloaded or derived in `First_Data_Fetching.ipynb`. Please run through this tutorial first to fetch data."
    ]
   },
   {
@@ -915,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
