--- a/tutorials/Mean_Squared_Error.ipynb
+++ b/tutorials/Mean_Squared_Error.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "Using the MSE instead of MAE, or forecasting mean instead of median, is appropriate if big errors are considered much worse than small ones. For example, you might not mind if the temperature is 1 degree different but really care if it's 30 degrees different and want to treat the 30 degree error as 900 times worse than the 1 degree error.\n",
     "\n",
-    "The units of MSE do not match the units of the forecasts or observations. "
+    "The units of MSE do not match the units of the forecasts or observations. \n",
+    "\n",
+    "**Note:** In this tutorial we use the forecast and analysis grids that are downloaded or derived in `First_Data_Fetching.ipynb`. Please run through this tutorial first to fetch data."
    ]
   },
   {
@@ -363,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
