--- a/tutorials/Root_Mean_Squared_Error.ipynb
+++ b/tutorials/Root_Mean_Squared_Error.ipynb
@@ -16,7 +16,9 @@
    "source": [
     "While using Mean Squared Error focuses the attention on large errors, the result ceases to be a 'representative' error. Using RMSE gives us the same units as the forecasts and observations, and with a magnitude more comparable to MAE. Similarly to the MSE, the RMSE is sensitive to large errors. \n",
     "\n",
-    "MSE and RMSE are both fair measures of error if you are forecasting the mean value. Although the MSE is slightly more efficient to calculate, the RMSE often has more intuitive values representing the error. The MSE or the RMSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast."
+    "MSE and RMSE are both fair measures of error if you are forecasting the mean value. Although the MSE is slightly more efficient to calculate, the RMSE often has more intuitive values representing the error. The MSE or the RMSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast.\n",
+    "\n",
+    "**Note:** In this tutorial we use the forecast and analysis grids that are downloaded or derived in `First_Data_Fetching.ipynb`. Please run through this tutorial first to fetch data."
    ]
   },
   {
@@ -293,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
