--- a/tutorials/Weighting_Results.ipynb
+++ b/tutorials/Weighting_Results.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "Sometimes, it's useful to calculate a few different perspectives at once. A more complex example might be to compare the latitude-weighted score to a population-weighted one, meaning both things need to be collected.\n",
     "\n",
-    "This notebook will go through some examples from the simple to the complex, showing both the importance and significance of considering weighting when calculating verification scores.\n"
+    "This notebook will go through some examples from the simple to the complex, showing both the importance and significance of considering weighting when calculating verification scores.\n",
+    "\n",
+    "**Note:** In this tutorial we use the forecast and analysis grids that are downloaded or derived in `First_Data_Fetching.ipynb`. Please run through this tutorial first to fetch data."
    ]
   },
   {
@@ -778,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
