update pearsons correlation notebook

--- a/tutorials/Pearsons_Correlation.ipynb
+++ b/tutorials/Pearsons_Correlation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "Text(0.5, 1.0, 'Perfectly correlated forecast and observations')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "Text(0.5, 0, 'Observed values')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "Text(0.5, 1.0, 'Poorly correlated forecast and observations')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "Text(0.5, 0, 'Observed values')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,25 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'correlation' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/nloveday/scores/tutorials/Pearsons_Correlation.ipynb Cell 16\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bll-b032183/home/nloveday/scores/tutorials/Pearsons_Correlation.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Let's calculate the correlation of each forecast system\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bll-b032183/home/nloveday/scores/tutorials/Pearsons_Correlation.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m corr1 \u001b[39m=\u001b[39m correlation(fcst1, obs)\u001b[39m.\u001b[39mitem()\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bll-b032183/home/nloveday/scores/tutorials/Pearsons_Correlation.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m corr2 \u001b[39m=\u001b[39m correlation(fcst2, obs)\u001b[39m.\u001b[39mitem()\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bll-b032183/home/nloveday/scores/tutorials/Pearsons_Correlation.ipynb#X21sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe correlation between forecast system 1 and the observations = \u001b[39m\u001b[39m{\u001b[39;00mcorr1\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'correlation' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The correlation between forecast system 1 and the observations = 1.00\n",
+      "The correlation between forecast system 2 and the observations = 0.02\n"
      ]
     }
    ],
    "source": [
     "#Let's calculate the correlation of each forecast system\n",
-    "corr1 = correlation(fcst1, obs).item()\n",
-    "corr2 = correlation(fcst2, obs).item()\n",
+    "corr1 = pearsonr(fcst1, obs).item()\n",
+    "corr2 = pearsonr(fcst2, obs).item()\n",
     "print(f\"The correlation between forecast system 1 and the observations = {corr1:.2f}\")\n",
     "print(f\"The correlation between forecast system 2 and the observations = {corr2:.2f}\")"
    ]
