add dimension handling notebook

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -181,10 +181,17 @@
     ]
    },
    "source": [
+    "- [Dimension handling](.Dimension_handling.ipynb)\n",
     "- [Weighting Results](./Weighting_Results.ipynb)\n",
     "- [Angular Data](./Angular_data.ipynb)\n",
     "- [Introduction to Pandas API](./Pandas_API.ipynb)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5051d7d2",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
