--- a/tutorials/Dimension_handling.ipynb
+++ b/tutorials/Dimension_handling.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -858,19 +858,20 @@
        "  fill: currentColor;\n",
        "}\n",
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray ()&gt;\n",
-       "array(1.21810508)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a507d9e9-af41-443d-823d-3bfede83fe8c' class='xr-array-in' type='checkbox' checked><label for='section-a507d9e9-af41-443d-823d-3bfede83fe8c' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1.218</span></div><div class='xr-array-data'><pre>array(1.21810508)</pre></div></div></li><li class='xr-section-item'><input id='section-f2aa2523-87d8-4eaa-833d-0afb3588af50' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-f2aa2523-87d8-4eaa-833d-0afb3588af50' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-e8b3a79a-58a8-4f4b-9289-c6ac3b65d39b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-e8b3a79a-58a8-4f4b-9289-c6ac3b65d39b' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-6d41de37-63af-44a4-994d-b1c326c64434' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-6d41de37-63af-44a4-994d-b1c326c64434' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "array(1.21810508)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-f0a617e7-0ac2-4946-a3d7-fac24f7a7d0d' class='xr-array-in' type='checkbox' checked><label for='section-f0a617e7-0ac2-4946-a3d7-fac24f7a7d0d' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>1.218</span></div><div class='xr-array-data'><pre>array(1.21810508)</pre></div></div></li><li class='xr-section-item'><input id='section-f3ecdfd1-2395-4334-92fe-fec13eb6d5b0' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-f3ecdfd1-2395-4334-92fe-fec13eb6d5b0' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-87e5b10e-3c0f-4334-a826-b05d9b8f8482' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-87e5b10e-3c0f-4334-a826-b05d9b8f8482' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-d39033b9-f3d1-4cd8-a89c-8b7ddb63d5ee' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-d39033b9-f3d1-4cd8-a89c-8b7ddb63d5ee' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray ()>\n",
        "array(1.21810508)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Calculate MSE\n",
     "mse(fcst_timeseries, obs_timeseries)"
    ]
   },
@@ -1428,8 +1429,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to calculate the MSE aggregated across time and space, we can call the MSE function in a couple of different ways that will give us the same result.\n",
-    "1. Don't use any dim handling arg will aggregate data and take the mean across all dimensions\n",
+    "If we want to calculate the MSE aggregated across time and space, there are a couple of different ways that we can call the MSE function that will give us the same result.\n",
+    "1. Not using any dim handling arg will aggregate data and take the mean across all dimensions\n",
     "2. Use `reduce_dims=\"all\"` to take the mean across all dimensions"
    ]
   },
@@ -3567,7 +3568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We may want to preserve all dimensions. This is particularly important for calculating confidence intervals. We can do so with using two approaches:\n",
+    "We may want to preserve all dimensions. This is particularly important for calculating confidence intervals. We can do so using two approaches:\n",
     "1. Set `preserve_dims=\"all`, or\n",
     "2. Set `preserve_dims=[\"valid_time\", \"lat\", \"lon\", \"lead_time]`\n",
     "\n",
