--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -181,7 +181,7 @@
     ]
    },
    "source": [
-    "- [Dimension handling](.Dimension_handling.ipynb)\n",
+    "- [Dimension Handling](.Dimension_Handling.ipynb)\n",
     "- [Weighting Results](./Weighting_Results.ipynb)\n",
     "- [Angular Data](./Angular_data.ipynb)\n",
     "- [Introduction to Pandas API](./Pandas_API.ipynb)"
