--- a/tutorials/Dimension_Handling.ipynb
+++ b/tutorials/Dimension_Handling.ipynb
@@ -3097,7 +3097,7 @@
    "source": [
     "Data can have many more dimensions. Additionally, forecast and observations can have different dimensions (e.g. forecast with a `lead_time` dimension). When this occurs, forecast and observations will be broadcast against each other following [numpy broadcasting rules](https://numpy.org/doc/stable/user/basics.broadcasting.html).\n",
     "\n",
-    "We will show and example with gridded data.\n",
+    "We will show an example with gridded data.\n",
     "\n",
     "The forecast has dimensions [`valid_time`, `lat`, `lon`, `lead_time`], while the observations only have dimensions [`valid_time`, `lat`, `lon`]"
    ]
@@ -4134,7 +4134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scoresenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4148,10 +4148,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.12.4"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
