Fine-grained adjustments to citations

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -155,7 +155,7 @@
 	doi          = {10.1002/qj.4206}
 }
 @Article{Taggart:2022c,
-	title		 = {Point forecasting and forecast evaluation with generalized Huber loss},
+	title		 = {Point forecasting and forecast evaluation with generalized {H}uber loss},
 	author		 = {Taggart, Robert},
 	journal		 = {Electronic Journal of Statistics},
 	volume		 = {16},
@@ -237,19 +237,19 @@
       journal={{arXiv {p}reprint arXiv:2404.18429}},
 	  doi={10.48550/arXiv.2404.18429}
 }
-@article{Ferro_2013, 
-	title={Fair scores for ensemble forecasts: Fair Scores for Ensemble Forecasts}, 
-	volume={140}, 
-	ISSN={0035-9009}, 
-	url={http://dx.doi.org/10.1002/qj.2270}, 
-	DOI={10.1002/qj.2270}, 
-	number={683}, 
-	journal={Quarterly Journal of the Royal Meteorological Society}, 
-	publisher={Wiley}, 
-	author={Ferro, C. A. T.}, 
-	year={2013}, 
-	month=dec, 
-	pages={1917–1923}
+@article{Ferro_2014, 
+	author = {Ferro, C. A. T.},
+	title = {Fair scores for ensemble forecasts},
+	journal = {Quarterly Journal of the Royal Meteorological Society},
+	volume = {140},
+	number = {683},
+	pages = {1917-1923},
+	keywords = {Brier score, continuous ranked probability score, scoring rules, forecast verification},
+	doi = {10.1002/qj.2270},
+	url = {https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/qj.2270},
+	eprint = {https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/qj.2270},
+	abstract = {Abstract The notion of fair scores for ensemble forecasts was introduced recently to reward ensembles with members that behave as though they and the verifying observation are sampled from the same distribution. In the case of forecasting binary outcomes, a characterization is given of a general class of fair scores for ensembles that are interpreted as random samples. This is also used to construct classes of fair scores for ensembles that forecast multicategory and continuous outcomes. The usual Brier, ranked probability and continuous ranked probability scores for ensemble forecasts are shown to be unfair, while adjusted versions of these scores are shown to be fair. A definition of fairness is also proposed for ensembles with members that are interpreted as being dependent and it is shown that fair scores exist only for some forms of dependence.},
+	year = {2014}
 }
 @article{Gneiting_2007, 
 	title={Strictly Proper Scoring Rules, Prediction, and Estimation}, 
@@ -292,7 +292,7 @@
 }
 @software{pandas:2024,
   author       = {{The pandas development team}},
-  title        = {pandas-dev/pandas: Pandas},
+  title        = {{pandas-dev/pandas: Pandas}},
   month        = apr,
   year         = 2024,
   publisher    = {Zenodo},
@@ -318,7 +318,7 @@
 @software{Morley:2020,
   author       = {Steve Morley and
                   Angeline Burrell},
-  title        = {drsteve/PyForecastTools: Version 1.1.1},
+  title        = {{drsteve/PyForecastTools: Version 1.1.1}},
   month        = apr,
   year         = 2020,
   publisher    = {Zenodo},
@@ -342,41 +342,44 @@
   year = {2020},
   month = {feb}
 }
-@software{zarr:2020,
+@software{zarr:2024,
   author       = {Alistair Miles and
-                  John Kirkham and
-                  Martin Durant and
-                  James Bourbeau and
-                  Tarik Onalan and
-                  Joe Hamman and
-                  Zain Patel and
-                  shikharsg and
-                  Matthew Rocklin and
-                  raphael dussin and
-                  Vincent Schut and
-                  Elliott Sales de Andrade and
-                  Ryan Abernathey and
-                  Charles Noyes and
-                  sbalmer and
-                  pyup.io bot and
-                  Tommy Tran and
-                  Stephan Saalfeld and
-                  Justin Swaney and
+                  jakirkham and
+                  M Bussonnier and
                   Josh Moore and
-                  Joe Jevnik and
-                  Jerome Kelleher and
-                  Jan Funke and
-                  George Sakkis and
+                  Dimitri Papadopoulos Orfanos and
+                  Davis Bennett and
+                  James Bourbeau and
+                  Joe Hamman and
+                  David Stansby and
+                  Andrew Fulton and
+                  Gregory Lee and
+                  Zain Patel and
+                  Ryan Abernathey and
+                  Mads R. B. Kristensen and
+                  Norman Rzepka and
+                  Saransh Chopra and
+                  AWA BRANDON AWA and
+                  Sanket Verma and
+                  Matthew Rocklin and
+                  Max Jones and
+                  Elliott Sales de Andrade and
+                  Martin Durant and
+                  Vincent Schut and
+                  raphael dussin and
+                  Shivank Chaudhary and
                   Chris Barnes and
-                  Anderson Banihirwe},
-  title        = {zarr-developers/zarr-python: v2.4.0},
-  month        = apr,
-  year         = 2020,
+                  Juan Nunez-Iglesias and
+                  shikharsg},
+  title        = {{zarr-developers/zarr-python: v2.18.2}},
+  month        = may,
+  year         = 2024,
   publisher    = {Zenodo},
-  version      = {v2.4.0},
-  doi          = {10.5281/zenodo.3773450},
-  url          = {https://doi.org/10.5281/zenodo.3773450}
+  version      = {v2.18.2},
+  doi          = {10.5281/zenodo.11320255},
+  url          = {https://doi.org/10.5281/zenodo.11320255}
 }
+
 @software{GRIB:2024,
   title = {WMO No. 306 FM 92 GRIB (edition 2)},
   author = {{World Meteorological Organization}},
