update ref to tw notebook in consistent scores notebook

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "The consistent scoring module in `scores` provides access to these families of consistent scores that can be used to tailor emphasis of predictive performance based on decision thresholds of interest.\n",
     "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Note:</b> Threshold weighted scoring functions will be added to scores. These threshold weighted scoring functions will use these consistent scoring functions and will allow users a more simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. The planned tutorial notebook for threshold weighted scoring functions is expected to complement this tutorial.\n",
-    "</div>\n",
+    "\n",
+    "<b>Note:</b> Threshold weighted scoring functions have been added to `scores` and provide users with a simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. The [tutorial notebook]((./Consistent_Scores.ipynb)) for threshold weighted scoring functions complements this tutorial.\n",
+    "\n",
     "\n",
     "## Example 1. A score consistent with the mean\n",
     "Let's jump into an example that illustrates a scoring function that is consistent with predicting the mean value using `scores`. Suppose we want to evaluate the performance of expected daily precipitation forecasts, but we want to place increasing importance on correctly forecasting extreme values. MSE is consistent with predicting the mean value, but weights all decision thresholds equally (as discussed further on).\n",
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
