Remove extra brackets in the link to the threshold weighted scores tutorial

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -22,7 +22,7 @@
     "The consistent scoring module in `scores` provides access to these families of consistent scores that can be used to tailor emphasis of predictive performance based on decision thresholds of interest.\n",
     "\n",
     "\n",
-    "<b>Note:</b> Threshold weighted scoring functions have been added to `scores` and provide users with a simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. The [tutorial notebook]((./Threshold_Weighted_Scores.ipynb)) for threshold weighted scoring functions complements this tutorial.\n",
+    "<b>Note:</b> Threshold weighted scoring functions have been added to `scores` and provide users with a simplified approach to evaluating forecasts using scores that emphasise performance across different decision thresholds. The [tutorial notebook](./Threshold_Weighted_Scores.ipynb) for threshold weighted scoring functions complements this tutorial.\n",
     "\n",
     "\n",
     "## Example 1. A score consistent with the mean\n",
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
