Specify more interesting image for thumbnail gallery for data fetching tutorial

--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "4f72dbcb-b44b-455d-a3f9-59325dab619c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Tutorial One - Data Preparation\n",
     "\n",
@@ -608,7 +614,13 @@
    "execution_count": 8,
    "id": "6a4e614d-054b-4333-9f86-cc86439824ee",
    "metadata": {
-    "tags": []
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
    },
    "outputs": [
     {
@@ -3011,7 +3023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
