Update the capitalisation of Huber in two places

--- a/tutorials/Consistent_Scores.ipynb
+++ b/tutorials/Consistent_Scores.ipynb
@@ -436,7 +436,7 @@
     "## Things to try next\n",
     "\n",
     "- Test out different weighting functions. \n",
-    "- Try out `consistent_huber_score`. This uses $\\phi$ and $\\phi'$ like `consistent_expectile_score`, but also takes a huber parameter.\n",
+    "- Try out `consistent_huber_score`. This uses $\\phi$ and $\\phi'$ like `consistent_expectile_score`, but also takes a Huber parameter.\n",
     "\n",
     "## Further reading\n",
     "- [Gneiting, T. (2011a). Making and evaluating point forecasts. Journal of the American Statistical Association, 106(494), 746-762.](https://doi.org/10.1198/jasa.2011.r10138)\n",
