Adds backticks around scores in "what to try next" section
Signed-off-by: Stephanie Chong <168800785+Steph-Chong@users.noreply.github.com>

--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -996,7 +996,7 @@
    "metadata": {},
    "source": [
     "## What to try next?\n",
-    "Have a look at Isotonic Regression in scores to see how conditional biases can be calculated.\n"
+    "Have a look at Isotonic Regression in `scores` to see how conditional biases can be calculated.\n"
    ]
   }
  ],
