--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -945,7 +945,7 @@
    "source": [
     "## Percent bias\n",
     "\n",
-    "Let's imagine that fcst.temp_scrn represents the forecasted streamflow values and obs.temp_scrn represents the observed streamflow values. Now, we want to create another dataset with significantly higher values by adding 1000 to both the observed and forecasted streamflow values."
+    "Let's imagine that `fcst.temp_scrn` represents the forecasted streamflow values and `obs.temp_scrn` represents the observed streamflow values. Now, we want to create another dataset with significantly higher values by adding 1000 to both the observed and forecasted streamflow values."
    ]
   },
   {
